--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 .idea/flask学生信息管理系统.iml
 .idea/misc.xml
 __pycache__/app.cpython-310.pyc
+.idea/modules.xml
+__pycache__/app.cpython-310.pyc
+.idea/flask手机信息管理系统.iml
